This patch fixes following kind of issue with automake 1.12
| automake: warnings are treated as errors
| /.../automake-1.12/am/ltlibrary.am: warning: 'libgnutls.la': linking libtool libraries using a non-POSIX
| /.../automake-1.12/am/ltlibrary.am: archiver requires 'AM_PROG_AR' in 'configure.ac'

Patch by: Nitin A Kamble <nitin.a.kamble@intel.com>

--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,9 @@ AC_MSG_RESULT([***
 
 dnl Checks for programs.
 AC_PROG_CC
+# automake 1.12 seems to require this, but automake 1.11 doesn't recognize it
+m4_pattern_allow([AM_PROG_AR])
+AM_PROG_AR
 AC_PROG_LN_S
 GTK_DOC_CHECK(1.1)
 AC_PATH_PROG([GAA], [gaa])
