--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -770,10 +770,11 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
   gnutls_cipher_algorithm_t gnutls_cipher_get (gnutls_session_t session);
   gnutls_kx_algorithm_t gnutls_kx_get (gnutls_session_t session);
   gnutls_mac_algorithm_t gnutls_mac_get (gnutls_session_t session);
-    gnutls_compression_method_t
+  gnutls_compression_method_t
     gnutls_compression_get (gnutls_session_t session);
-    gnutls_certificate_type_t
+  gnutls_certificate_type_t
     gnutls_certificate_type_get (gnutls_session_t session);
+
   int gnutls_sign_algorithm_get_requested (gnutls_session_t session,
                                            size_t indx,
                                            gnutls_sign_algorithm_t * algo);
@@ -791,6 +792,10 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
                                                 type);
   const char *gnutls_pk_get_name (gnutls_pk_algorithm_t algorithm);
   const char *gnutls_sign_get_name (gnutls_sign_algorithm_t algorithm);
+  
+  gnutls_sign_algorithm_t gnutls_pk_to_sign (gnutls_pk_algorithm_t pk,
+                                             gnutls_digest_algorithm_t d);
+
 #define gnutls_sign_algorithm_get_name gnutls_sign_get_name
 
   gnutls_mac_algorithm_t gnutls_mac_get_id (const char *name);
