added new functions

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -503,6 +503,7 @@ FUNCS += functions/gnutls_pubkey_encrypt_data
 FUNCS += functions/gnutls_x509_crt_set_pubkey
 FUNCS += functions/gnutls_x509_crq_set_pubkey
 FUNCS += functions/gnutls_pubkey_verify_hash
+FUNCS += functions/gnutls_pubkey_verify_hash2
 FUNCS += functions/gnutls_pubkey_get_verify_algorithm
 FUNCS += functions/gnutls_pubkey_verify_data
 FUNCS += functions/gnutls_pubkey_verify_data2
@@ -949,6 +950,7 @@ FUNCS += functions/gnutls_pkcs11_token_get_url
 FUNCS += functions/gnutls_pkcs11_token_get_info
 FUNCS += functions/gnutls_pkcs11_token_get_flags
 FUNCS += functions/gnutls_pkcs11_obj_list_import_url
+FUNCS += functions/gnutls_pkcs11_obj_list_import_url2
 FUNCS += functions/gnutls_x509_crt_import_pkcs11
 FUNCS += functions/gnutls_x509_crt_import_pkcs11_url
 FUNCS += functions/gnutls_pkcs11_obj_get_type
@@ -1191,3 +1193,6 @@ FUNCS += functions/gnutls_x509_trust_list_add_named_crt
 FUNCS += functions/gnutls_x509_trust_list_add_crls
 FUNCS += functions/gnutls_x509_trust_list_verify_named_crt
 FUNCS += functions/gnutls_x509_trust_list_verify_crt
+FUNCS += functions/gnutls_x509_trust_list_add_trust_mem
+FUNCS += functions/gnutls_x509_trust_list_add_trust_file
+FUNCS += functions/gnutls_x509_trust_list_add_system_trust
