--- a/src/libopts/Makefile.am
+++ b/src/libopts/Makefile.am
@@ -7,14 +7,14 @@ noinst_LTLIBRARIES      = libopts.la
 endif
 libopts_la_SOURCES      = libopts.c
 libopts_la_CPPFLAGS     = -I$(top_srcdir)
-libopts_la_LDFLAGS      = -version-info  36:3:11
+libopts_la_LDFLAGS      = -version-info  36:4:11
 EXTRA_DIST              = \
     ag-char-map.h           alias.c                 ao-strs.c  \
-    ao-strs.h               autoopts/project.h      autoopts/options.h  \
+    ao-strs.h               autoopts/options.h      autoopts/project.h  \
     autoopts/usage-txt.h    autoopts.c              autoopts.h  \
-    boolean.c               check.c                 compat/pathfind.c  \
-    compat/strchr.c         compat/windows-config.h compat/snprintf.c  \
-    compat/compat.h         compat/strdup.c         configfile.c  \
+    boolean.c               check.c                 compat/strchr.c  \
+    compat/pathfind.c       compat/strdup.c         compat/windows-config.h  \
+    compat/snprintf.c       compat/compat.h         configfile.c  \
     cook.c                  COPYING.gplv3           COPYING.lgplv3  \
     COPYING.mbsd            enum.c                  env.c  \
     file.c                  find.c                  genshell.c  \
