added new functions

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -503,6 +503,7 @@ FUNCS += functions/gnutls_pubkey_encrypt_data
 FUNCS += functions/gnutls_x509_crt_set_pubkey
 FUNCS += functions/gnutls_x509_crq_set_pubkey
 FUNCS += functions/gnutls_pubkey_verify_hash
+FUNCS += functions/gnutls_pubkey_verify_hash2
 FUNCS += functions/gnutls_pubkey_get_verify_algorithm
 FUNCS += functions/gnutls_pubkey_verify_data
 FUNCS += functions/gnutls_pubkey_verify_data2
@@ -621,6 +622,7 @@ FUNCS += functions/gnutls_kx_get_name
 FUNCS += functions/gnutls_certificate_type_get_name
 FUNCS += functions/gnutls_pk_get_name
 FUNCS += functions/gnutls_sign_get_name
+FUNCS += functions/gnutls_pk_to_sign
 FUNCS += functions/gnutls_mac_get_id
 FUNCS += functions/gnutls_compression_get_id
 FUNCS += functions/gnutls_cipher_get_id
