--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -100,6 +100,7 @@ APIMANS += gnutls_pubkey_encrypt_data.3
 APIMANS += gnutls_x509_crt_set_pubkey.3
 APIMANS += gnutls_x509_crq_set_pubkey.3
 APIMANS += gnutls_pubkey_verify_hash.3
+APIMANS += gnutls_pubkey_verify_hash2.3
 APIMANS += gnutls_pubkey_get_verify_algorithm.3
 APIMANS += gnutls_pubkey_verify_data.3
 APIMANS += gnutls_pubkey_verify_data2.3
@@ -218,6 +219,7 @@ APIMANS += gnutls_kx_get_name.3
 APIMANS += gnutls_certificate_type_get_name.3
 APIMANS += gnutls_pk_get_name.3
 APIMANS += gnutls_sign_get_name.3
+APIMANS += gnutls_pk_to_sign.3
 APIMANS += gnutls_mac_get_id.3
 APIMANS += gnutls_compression_get_id.3
 APIMANS += gnutls_cipher_get_id.3
@@ -327,7 +329,6 @@ APIMANS += gnutls_certificate_set_x509_simple_pkcs12_mem.3
 APIMANS += gnutls_certificate_set_x509_key.3
 APIMANS += gnutls_certificate_set_x509_trust.3
 APIMANS += gnutls_certificate_set_x509_crl.3
-APIMANS += gnutls_certificate_get_openpgp_keyring.3
 APIMANS += gnutls_global_init.3
 APIMANS += gnutls_global_deinit.3
 APIMANS += gnutls_global_set_mutex.3
