--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -140,6 +140,10 @@ libgnutls_la_LDFLAGS += $(LTLIBNETTLE)
 libgnutls_la_LIBADD += nettle/libcrypto.la
 endif
 
+if WINDOWS
+libgnutls_la_LDFLAGS += -lcrypt32
+endif
+
 if HAVE_LD_OUTPUT_DEF
 libgnutls_la_LDFLAGS += -Wl,--output-def,libgnutls-$(DLL_VERSION).def
 libgnutls-$(DLL_VERSION).def: libgnutls.la
