Added support for windows trusted certificate store

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -108,6 +108,10 @@ libgnutls_la_SOURCES = $(HFILES) $(COBJECTS) $(SRP_COBJECTS)	\
 	$(PSK_COBJECTS) \
 	gnutls.asn pkix.asn libgnutls.map
 
+if WINDOWS
+libgnutls_la_LDFLAGS += -lcrypt32
+endif
+
 libgnutls_la_LDFLAGS = -no-undefined \
 	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 
