--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -99,9 +99,8 @@ APIMANS += gnutls_pubkey_import_ecc_raw.3
 APIMANS += gnutls_pubkey_encrypt_data.3
 APIMANS += gnutls_x509_crt_set_pubkey.3
 APIMANS += gnutls_x509_crq_set_pubkey.3
-APIMANS += gnutls_pubkey_verify_hash.3
+APIMANS += gnutls_pubkey_verify_hash2.3
 APIMANS += gnutls_pubkey_get_verify_algorithm.3
-APIMANS += gnutls_pubkey_verify_data.3
 APIMANS += gnutls_pubkey_verify_data2.3
 APIMANS += gnutls_privkey_init.3
 APIMANS += gnutls_privkey_deinit.3
@@ -125,6 +124,8 @@ APIMANS += gnutls_pcert_import_openpgp.3
 APIMANS += gnutls_pcert_deinit.3
 APIMANS += gnutls_certificate_set_retrieve_function2.3
 APIMANS += gnutls_certificate_set_key.3
+APIMANS += gnutls_pubkey_verify_data.3
+APIMANS += gnutls_pubkey_verify_hash.3
 APIMANS += gnutls_sign_callback_set.3
 APIMANS += gnutls_sign_callback_get.3
 APIMANS += gnutls_x509_privkey_sign_hash.3
@@ -218,6 +219,7 @@ APIMANS += gnutls_kx_get_name.3
 APIMANS += gnutls_certificate_type_get_name.3
 APIMANS += gnutls_pk_get_name.3
 APIMANS += gnutls_sign_get_name.3
+APIMANS += gnutls_pk_to_sign.3
 APIMANS += gnutls_mac_get_id.3
 APIMANS += gnutls_compression_get_id.3
 APIMANS += gnutls_cipher_get_id.3
