--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -429,8 +429,7 @@ extern "C"
  * @GNUTLS_CERT_REVOKED: Certificate is revoked by its authority.  In X.509 this will be
  *   set only if CRLs are checked.
  * @GNUTLS_CERT_SIGNER_NOT_FOUND: The certificate's issuer is not known. 
- *   This is the case if the issue is not included in the trusted certificate list.
- *   not found.
+ *   This is the case if the issuer is not included in the trusted certificate list.
  * @GNUTLS_CERT_SIGNER_NOT_CA: The certificate’s signer was not a CA. This
  *   may happen if this was a version 1 certificate, which is common with 
  *   some CAs, or a version 3 certificate without the basic constrains extension.
