moved ca-certs.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -99,7 +99,7 @@ dist_check_SCRIPTS = rfc2253-escape-test
 TESTS = $(ctests) $(dist_check_SCRIPTS)
 
 TESTS_ENVIRONMENT =						\
-	CAFILE=$(srcdir)/certs/ca-certs.pem			\
+	CAFILE=$(srcdir)/cert-tests/ca-certs.pem		\
 	PKCS12FILE=$(srcdir)/pkcs12-decode/client.p12		\
 	PKCS12PASSWORD=foobar					\
 	PKCS12FILE_2=$(srcdir)/pkcs12-decode/pkcs12_2certs.p12	\
