--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1735,6 +1735,8 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
 			   time_t expiration,
 			   unsigned int flags);
 
+  /* Other help functions */
+int gnutls_load_file(const char* filename, gnutls_datum_t * data);
 
   /* Gnutls error codes. The mapping to a TLS alert is also shown in
    * comments.
