--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -512,6 +512,9 @@ FUNCS += functions/gnutls_privkey_get_type
 FUNCS += functions/gnutls_privkey_import_pkcs11
 FUNCS += functions/gnutls_privkey_import_x509
 FUNCS += functions/gnutls_privkey_import_openpgp
+FUNCS += functions/gnutls_privkey_import_openpgp_raw
+FUNCS += functions/gnutls_privkey_import_x509_raw
+FUNCS += functions/gnutls_privkey_import_pkcs11_url
 FUNCS += functions/gnutls_privkey_import_ext
 FUNCS += functions/gnutls_privkey_sign_data
 FUNCS += functions/gnutls_privkey_sign_hash
@@ -828,6 +831,7 @@ FUNCS += functions/gnutls_tdb_deinit
 FUNCS += functions/gnutls_verify_stored_pubkey
 FUNCS += functions/gnutls_store_commitment
 FUNCS += functions/gnutls_store_pubkey
+FUNCS += functions/gnutls_load_file
 FUNCS += functions/gnutls_ocsp_req_init
 FUNCS += functions/gnutls_ocsp_req_deinit
 FUNCS += functions/gnutls_ocsp_req_import
