Added functions gnutls_x509_privkey_import2 and gnutls_x509_privkey_import_openssl.
The former imports keys in arbitrary formats and the latter imports openssl keys (unfinished).

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1137,6 +1137,8 @@ FUNCS += functions/gnutls_x509_privkey_sec_param
 FUNCS += functions/gnutls_x509_privkey_cpy
 FUNCS += functions/gnutls_x509_privkey_import
 FUNCS += functions/gnutls_x509_privkey_import_pkcs8
+FUNCS += functions/gnutls_x509_privkey_import_openssl
+FUNCS += functions/gnutls_x509_privkey_import2
 FUNCS += functions/gnutls_x509_privkey_import_rsa_raw
 FUNCS += functions/gnutls_x509_privkey_import_rsa_raw2
 FUNCS += functions/gnutls_x509_privkey_import_ecc_raw
