--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -76,6 +76,7 @@ extern "C"
  * @GNUTLS_CIPHER_AES_256_CBC: AES in CBC mode with 256-bit keys.
  * @GNUTLS_CIPHER_ARCFOUR_40: ARCFOUR stream cipher with 40-bit keys.
  * @GNUTLS_CIPHER_CAMELLIA_128_CBC: Camellia in CBC mode with 128-bit keys.
+ * @GNUTLS_CIPHER_CAMELLIA_192_CBC: Camellia in CBC mode with 192-bit keys.
  * @GNUTLS_CIPHER_CAMELLIA_256_CBC: Camellia in CBC mode with 256-bit keys.
  * @GNUTLS_CIPHER_RC2_40_CBC: RC2 in CBC mode with 40-bit keys.
  * @GNUTLS_CIPHER_DES_CBC: DES in CBC mode (56-bit keys).
@@ -109,6 +110,7 @@ extern "C"
     GNUTLS_CIPHER_AES_192_CBC = 92,
     GNUTLS_CIPHER_AES_128_GCM = 93,
     GNUTLS_CIPHER_AES_256_GCM = 94,
+    GNUTLS_CIPHER_CAMELLIA_192_CBC = 95,
 
     /* used only for PGP internals. Ignored in TLS/SSL
      */
