--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -68,7 +68,8 @@ ctests = mini-deflate simple gc set_pkcs12_cred certder certuniqueid	\
 	 mini-rehandshake rng-fork mini-eagain-dtls resume-dtls \
 	 x509cert x509cert-tl infoaccess rsa-encrypt-decrypt \
 	 mini-loss-time mini-tdb mini-dtls-rehandshake mini-record \
-	 mini-termination mini-x509-cas mini-x509-2 pkcs12_simple
+	 mini-termination mini-x509-cas mini-x509-2 pkcs12_simple \
+	 mini-emsgsize-dtls
 
 if ENABLE_OCSP
 ctests += ocsp
