--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1914,6 +1914,9 @@ int gnutls_load_file(const char* filename, gnutls_datum_t * data);
 #define GNUTLS_E_X509_UNSUPPORTED_EXTENSION -327
 #define GNUTLS_E_SESSION_EOF -328
 
+#define GNUTLS_E_TPM_ERROR -329
+#define GNUTLS_E_PIN_ERROR GNUTLS_E_PKCS11_PIN_ERROR
+
 #define GNUTLS_E_UNIMPLEMENTED_FEATURE -1250
 
 
