--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -483,6 +483,7 @@ FUNCS += functions/gnutls_pubkey_import_x509
 FUNCS += functions/gnutls_pubkey_import_pkcs11
 FUNCS += functions/gnutls_pubkey_import_openpgp
 FUNCS += functions/gnutls_pubkey_import_privkey
+FUNCS += functions/gnutls_pubkey_import_tpm_url
 FUNCS += functions/gnutls_pubkey_import_tpm_raw
 FUNCS += functions/gnutls_pubkey_get_preferred_hash_algorithm
 FUNCS += functions/gnutls_pubkey_get_pk_rsa_raw
@@ -516,6 +517,7 @@ FUNCS += functions/gnutls_privkey_import_openpgp
 FUNCS += functions/gnutls_privkey_import_openpgp_raw
 FUNCS += functions/gnutls_privkey_import_x509_raw
 FUNCS += functions/gnutls_privkey_import_tpm_raw
+FUNCS += functions/gnutls_privkey_import_tpm_url
 FUNCS += functions/gnutls_privkey_import_pkcs11_url
 FUNCS += functions/gnutls_privkey_import_ext
 FUNCS += functions/gnutls_privkey_import_ext2
@@ -997,6 +999,10 @@ FUNCS += functions/gnutls_pkcs12_bag_set_key_id
 FUNCS += functions/gnutls_pkcs12_bag_get_friendly_name
 FUNCS += functions/gnutls_pkcs12_bag_set_friendly_name
 FUNCS += functions/gnutls_tpm_privkey_generate
+FUNCS += functions/gnutls_tpm_key_list_deinit
+FUNCS += functions/gnutls_tpm_key_list_get_url
+FUNCS += functions/gnutls_tpm_get_registered
+FUNCS += functions/gnutls_tpm_privkey_delete
 FUNCS += functions/gnutls_x509_crt_init
 FUNCS += functions/gnutls_x509_crt_deinit
 FUNCS += functions/gnutls_x509_crt_import
